@@ -5,6 +5,7 @@ Version 8.3.0DEV
  - Document that minimum PHP version is now 8.1.0.
  - Upgrade Symfony to 6.2 and upgrade other library dependencies.
  - Show link to problem text on jury problem overview and contest detail pages.
+ - Add label to teams to be in sync with ICPC CCS spec.
 
 Version 8.2.0 - 6 March 2023
 ----------------------------
